[package]
name = "min_colored"
version = "0.1.0"
edition = "2021"
authors = [ "Kisaragi Marine <kisaragi.effective@gmail.com>" ]
license = "CC0-1.0"
description = "Compact implementation for ANSI color sequence"
keywords = ["ansi", "color", "terminal"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []
windows_virtual_terminal_sequence = ["std", "windows"]

[dependencies]
windows = { version = "0.46.0", features = ["Win32_System_Console", "Win32_Foundation"], optional = true }
